# HAQBot

./: .dockerignore  .env.default  .gitignore  Dockerfile  Dockerfile-CN  README.md  README_CN.md  docker-compose.yml  pyproject.toml  supervisord.conf
docs/: SKILLS.md
src/maid/: __init__.py  main.py
src/maid/bot/: connection.py  sender.py  websocket.py
src/maid/bot/handlers/: __init__.py  commands.py  conversation.py  info.py  system.py
src/maid/clients/: clawdbot.py  homeassistant.py  napcat.py  tencent_asr.py
src/maid/handlers/: conversation.py
src/maid/models/: message.py
src/maid/services/: sender.py
src/maid/utils/: __init__.py  download.py  encoder.py  entity_cache.py  i18n.py  logger.py  response.py  video.py
src/maid/webhook/: app.py
src/meteion/: main.py  message.py
src/meteion/bot/: websocket.py
src/meteion/clients/: homeassistant.py  napcat.py  tencent_asr.py
src/meteion/handlers/: conversation.py
src/meteion/models/: message.py
src/meteion/services/: sender.py
src/meteion/utils/: __init__.py  encoder.py  entity_cache.py  i18n.py  logger.py  utils.py  video.py
src/meteion/webhook/: app.py
